--- a/군집분석.md
+++ b/군집분석.md
@@ -1,5 +1,45 @@
 
 
 # 군집분석
-## 정의 : 각 객체의 유사성을 측정하여 유사성이 높은 대상 집단을 분류하고, 군집에 속한 객체들의 유사성과 서로 다른 군집에 속한 객체간의 상이성을 규명하는 분석 방법
+### 정의 : 각 객체의 유사성을 측정하여 유사성이 높은 대상 집단을 분류하고, 군집에 속한 객체들의 유사성과 서로 다른 군집에 속한 객체간의 상이성을 규명하는 분석 방법
 
+Reference : 
+개요편 https://m.blog.naver.com/PostView.nhn?blogId=gkenq&logNo=10188552802&proxyReferer=https:%2F%2Fwww.google.com%2F 
+비계층적 군집분석 추가편 https://yganalyst.github.io/ml/ML_clustering/ (python code 포함)
+
+### 차이점
+회귀분석/판별분석/분산분석/요인분석/군집분석
+- 회귀분석은 두 변수의 상관관계분석과 동일한 결과를 가져옴
+- 판별분석도 현상의 설명 및 예측목적을 위해 이용되어지는 기법으로 분석의 목적이나 독립변수의 성격은 같으나, 종속변수가 명목측정이라는 점에서 차이가 있음. 
+- 분산분석 (ANOVA)는 이와 반대로 독립변수가 명목이라는 점에서 회귀 분석과 차이가남. 분산분석이란 Dummy 변수들을 독립변수로 이용한 회귀분석과 동일한 관계
+- 요인분석이나 군집분석은 변수들관의 종속관계보다는 이들의 상화 관계를 파악하는데 중점을 두는 기법. 요인 분석은 유사한 변수를 함께 묶어 주는 것이 목적, 군집분석은 객체의 유사성을 측정하여 유사성이 높은 대상집단을 분류 
+
+Reference : 
+비교편 https://blog.daum.net/jhlee03/109
+
+### 혼합 분포 군집 
+모형 기반의 군집 방법이며, 데이터가 K 개의 모수적 모형의 가중합으로 표현되는 모집단 모형으로부터 나왔다는 가정하에서 모수와 함께 가중치를 자료로부터 추정하는 방법을 사용 
+모수와 가중치의 추정에는 EM 알고리즘을 사용한다
+
+- EM 알고리즘 : 
+- 혼합모형에서 모수와 가중치의 추정을 위해 사용되는 알고리즘
+- 통계 모델의 수식을 정확히 풀 수 없을 때 최대가능도/최대우도(Maximun Likelihood Estimation)를 구하는데 사용된다.
+- 미지의 분포 파라미터를 주어진 데이터를 가지고 예측하고 그 예측값을 다시 주어진 데이터를 기반으로 기대치를 최대화시키는
+- 파라미터를 구하는 과정을 반복하면서 최적 파라미터(최대 우도추정치를 얻는 방법
+- 초기 클러스터의 개수를 정해줘야 함
+- k-fold cross validation으로 적절한 클러스터 개수를 찾을 수 있음
+- 진행과정
+(1) E-단계: 각 자료에 대해 Z의 조건부분포(어느 집단에 속할지에 대한)로부터 조건부 기댓값을 구할 수 있음
+(2) M-단계: 관측변수 X와 잠재변수 Z를 포함하는 (X, Z)에 대한 로그-가능도함수(이를 보정된(augmented) 로그-가능도함수라 함)에 Z 대신 상수값인 Z의 조건부 기댓값을 대입하면, 로그-가능도함수를 최대로 하는 모수를 쉽게 찾을 수 있다.
+갱신된 모수 추정치에 대해 위 과정을 반복한다면 수렴하는 값을 얻게되고, 이는 최대 가능도 추정치로 사용될 수 있다.
+
+Reference :
+EM 알고리즘편 http://sanghyukchun.github.io/70/ (이론적 설명)
+
+### SOM (self organizing Map)
+- 개요 : 자가 조직화 지도 알고리즘은 코호넨에 의해 제시, 개발되었으며 코호넨 맵이라고도 불리어진다. SOM은 비지도 신경망으로 고차원의 데이터를 이해하기 쉬운 저차원의 뉴런으로 정렬하여 지도의 형태로 형상화. 이러한 형상화는 입력변수의 위치관계를 그대로 보존한다는 특징이 있다. SOM은 입력층과 경쟁층 2개의 인공신경망 층으로 구성되어져 있다.
+
+![image](https://user-images.githubusercontent.com/61487762/113497197-a1334400-953c-11eb-83c1-3d3baab3d7e1.png)
+
+Reference : 
+SOM 이론편 https://ratsgo.github.io/machine%20learning/2017/05/01/SOM/
