--- a/군집분석.md
+++ b/군집분석.md
@@ -43,3 +43,14 @@ Reference :
 
 Reference : 
 - SOM 이론편 https://ratsgo.github.io/machine%20learning/2017/05/01/SOM/
+
+### Resampling (재표본추출) 
+
+	1. K -fold cross validation
+	2. 붓스트랩
+	3. 홀드아웃방법 
+
+
+
+
+
