--- a/군집분석.md
+++ b/군집분석.md
@@ -46,9 +46,25 @@ Reference :
 
 ### Resampling (재표본추출) 
 
-	1. K -fold cross validation
-	2. 붓스트랩
-	3. 홀드아웃방법 
+	1. K -fold cross validation : 데이터를 k 개 집단으로 나눈 뒤 k-1 개의 집단으로 학습시키고 나머지 1개 집단으로 분류기의 성능을 테스트
+	2. 붓스트랩 : 표본샘플에서 또 다시 재표본 샘플을 여러번 추출하는 법. 샘플에 단 한 번도 선택되지 않은 샘플을 OOB라고 불리우고 OOB Error를 통해 오차 측정
+	3. 홀드아웃방법 : 데이터를 Train, Test, Validation 으로 나누는 방법
+
+
+### 군집화 기법의 종류 
+
+	1. 밀도기반 군집분석 : 어느 점을 기준으로 주어진 반경 내에 최소 개수 만큼의 데이터들은 가질 수 있도록 함으로써 특정 밀도 함수 혹은 밀도에 의해 군집을 형성해나가는 기법
+		DBSCN, OPTICS, DENCLUE
+	2. 격자기반 군집분석 : 데이터가 존재하는 공간을 격자 구조로 이루어진 유한개의 셀들로 양자화 한뒤, 데이터 포인트 대신 셀을 이용해 군집화 과정을 수행
+		STING, Wave Cluster, CLIQUE
+		
+	Reference : 
+	- DBSCAN 	https://bcho.tistory.com/1205
+
+### 군집분석의 타당성 지표 
+
+	1. Sihouette (실루엣)
+	2. Dunn Index 
 
 
 
