--- a/사회연결망분석.md
+++ b/사회연결망분석.md
@@ -16,11 +16,11 @@
  
 #### 사회연결망 분석에서 네트워크 구조를 파악하기 위한 기법
 1. 중심성 ★
-      • 연결정도 중심성 : 한점에 직접적으로 연결된 점들의 합
-      • 근접 중심성 : 한 노드로부터 다른 노드에 도달하기까지 필요한 최소 단계의 합
-      • 매개 중심성 : 네트워크 내에서 한 점이 담당하는 매개자 혹은 중재자 역할의 정도
-      • 위세 중심성 : 자신의 연결 정도 중심성으로부터 발생하는 영향력과 자신과 연결된 타인의 영향력을 합하여 결정
-       ※ 보나시치 권력지수 : 위세 중심성의 일반적인 형태로, 연결된 노드의 중요성에 가중치를 둬 노드의 중심성을 측정하는 방법
+      - 연결정도 중심성 : 한점에 직접적으로 연결된 점들의 합
+      - 근접 중심성 : 한 노드로부터 다른 노드에 도달하기까지 필요한 최소 단계의 합
+      - 매개 중심성 : 네트워크 내에서 한 점이 담당하는 매개자 혹은 중재자 역할의 정도
+      - 위세 중심성 : 자신의 연결 정도 중심성으로부터 발생하는 영향력과 자신과 연결된 타인의 영향력을 합하여 결정
+       - 보나시치 권력지수 : 위세 중심성의 일반적인 형태로, 연결된 노드의 중요성에 가중치를 둬 노드의 중심성을 측정하는 방법
 
 2. 밀도(Density)
 3. 구조적 틈새(Structural hole)
@@ -30,13 +30,13 @@
 #### 커뮤니티의 수를 측정하는 방법
 
 1. WALKRAP 알고리즘
-      • 일련의 random walk과정을 통해 커뮤니티를 발견
-      • 버텍스(vertex, 그래프의 상단 꼭지점)를 하나의 커뮤니티로 취급해 점차 더 큰 그룹을 병합하면서 클러스터링
+      - 일련의 random walk과정을 통해 커뮤니티를 발견
+      - 버텍스(vertex, 그래프의 상단 꼭지점)를 하나의 커뮤니티로 취급해 점차 더 큰 그룹을 병합하면서 클러스터링
           
 2. Edge Betweenness method 알고리즘
 
-      • 그래프에 존재하는 최단거리(shortest path) 중 몇 개가 그 edge(연결, 즉 link)를 거쳐가는지를 이용해 edge-betweenness 점수를 측정
-      • 높은 edge-betweenness 점수를 갖는 edge가 클러스터를 분리하는 속성을 가진다고 가정
+      - 그래프에 존재하는 최단거리(shortest path) 중 몇 개가 그 edge(연결, 즉 link)를 거쳐가는지를 이용해 edge-betweenness 점수를 측정
+      - 높은 edge-betweenness 점수를 갖는 edge가 클러스터를 분리하는 속성을 가진다고 가정
       
       
       
